# mmck-lists

./: .travis.yml  Makefile.am  NEWS  README  README.md  configure.ac
doc/: mmck-lists.texi
lib/: config.scm.in  mmck.lists.assertions.scm  mmck.lists.core.scm  mmck.lists.scm  mmck.lists.version.scm
tests/: test-lists-core.scm  test-version.scm
